# MemoryGraf

./: .gitignore  .mcp.json.example  DESIGN.md  E2E-INTEGRATION-TEST.md  LICENSE  MEJORAS-FUTURAS.md  ONBOARDING.md  PLAN-CAPAS-CONTEXTUALES.md  README.md  benchmark.py  install.ps1  install.sh  memorygraf.config.example.json  memorygraf.entities.example.json  prototype_m1_history_cochange.py  pyproject.toml  requirements-full.txt
memorygraf/: __init__.py  analyze.py  cli.py  confidence.py  context_compiler.py  cross_link.py  deep_history.py  docs.py  doctor.py  embedders.py  entities.py  git_layer.py  indexer.py  llm_setup.py  mcp_server.py  model.py  ollama.py  ollama_setup.py  pipeline.py  query.py  report.py  semantic.py  store.py  summarizer.py  viz.py  watcher.py  workspace.py
memorygraf/extractors/: __init__.py  js_ts.py  python_ast.py  ts_generic.py  ts_treesitter.py
memorygraf/runtime/: __init__.py  lsp.py  tests.py
tests/: test_memorygraf.py
